<resources>
    <string name="app_name">TravelFeedback</string>
    <string name="SignUp">Sign Up</string>


    <string-array name="States">
        <item>Maharashtra</item>
        <item>Uttarakhand</item>
        <item>Punjab</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_residence">Residence</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>


</resources>
